--- a/demo.html
+++ b/demo.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -9,16 +9,20 @@
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
 </head>
 
-<body class="bg-success">
-    <div class="data-tilt bg-danger p-5" style="transform-style: preserve-3d;">
+<body class="">
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <lottie-player src="https://assets7.lottiefiles.com/packages/lf20_kyu7xb1v.json" background="transparent" speed="1"
+        style="width: 300px; height: 300px;" loop autoplay></lottie-player>
+
+    <!-- <div class="data-tilt bg-danger p-5" style="transform-style: preserve-3d;">
         <div class="" style="height: 199px; width: 199px; background-color: #fff; transform: translateZ(20px);"></div>
     </div>
     <script src="./assets/js/bootstrap.bundle.min.js"></script>
     <!-- jquery script -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"
-    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-<script type="text/javascript" src="./assets/js/tilt.jquery.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="./assets/js/tilt.jquery.js"></script> -->
 
 </body>
 
-</html> -->
+</html>
